cluster/syncthing/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: syncthing
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: dashboard
  name: syncthing
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: syncthing.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncthing.progamesigner.dev
    secretName: tls-dev-progamesigner
